# aws-training-plan

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/training_plan_discovery/: __init__.py  cli.py  discovery.py  web_app.py
src/training_plan_discovery/static/: app.js  index.html  styles.css
tests/: test_discovery.py  test_entrypoints.py  test_web_app.py
