[project]
name = "aws-training-plan"
version = "0.1.0"
description = "Local UI and CLI for discovering SageMaker HyperPod training plan offerings across commercial US regions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[project.scripts]
training-plan-discovery = "training_plan_discovery.cli:main"
training-plan-discovery-web = "training_plan_discovery.web_app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
training_plan_discovery = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
